--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -34,3 +34,34 @@ body {
     margin: 1rem;
     align-items: center;
 }
+
+.auth {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.auth-btn {
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: #2f3e4e;
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+#err {
+    color: red;
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+}
