--- a/src/views/panel.ejs
+++ b/src/views/panel.ejs
@@ -31,7 +31,7 @@
     </div>
 
     <script>  
-        const extFilters = ['.cpp', '.c', '.h', '.hpp', '.ld', '.s'];
+        const extFilters = ['.cpp', '.c', '.h', '.hpp', '.s', '.asm'];
         const file = document.getElementById('file');
         file.addEventListener('change', (e) => {
             // clear file list
